package ar.edu.ubp.doo.distribuidoragas.bo;

public interface EstadoPedido {

    boolean procesar(Pedido pedido);

}
