package ar.edu.ubp.doo.distribuidoragas.bo;

public interface PersonaFactory {

    Persona crearPersona();

}